--- a/app/style.css
+++ b/app/style.css
@@ -66,13 +66,20 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(50%, 1fr));
     place-items: stretch;
+    height: calc(100vh - 77px);
 }
 .grid .video {
     display: flex;
     flex-direction: column;
 }
 .grid .video .stream {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+.grid .video div {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .nothing {
