--- a/app/style.css
+++ b/app/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(17 20 89);
+    background: #151823;
     color: #fff;
     font-family: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     width: 100vw;
@@ -46,10 +46,10 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    border: 1px solid #ffffff30;
+    border: 1px solid #ffffff20;
     border-radius: 3px;
     padding: 3px;
-    background: #00000030;
+    background: #1c202f;
 }
 .card .name {
     font-size: 15px;
