--- a/app/style.css
+++ b/app/style.css
@@ -69,6 +69,7 @@ body {
     height: calc(100vh - 77px);
 }
 .grid .video {
+    position: relative;
     display: flex;
     flex-direction: column;
 }
